--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,6 +56,7 @@ body {
     background-size: cover;
     background-position:center;
     margin: 0;
+    margin-top: 70px;
 
 
 
@@ -224,17 +225,17 @@ header h1 {
     right: 0;
     color: #fff;
     font-size: 40px;
+   
 }
 
 #weather {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 1500px; /* 적절한 높이 조정 */
+     /* 적절한 높이 조정 */
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0px;
+    margin-top: 510px;
     color: #fff;
     font-size: 20px;
+    
 }
